--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Mar 08 2023 13:05:34 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="640850b12fda69d7945922a4" data-wf-site="6400ef4685f0db4acb82e76c">
 <head>
   <meta charset="utf-8">
-  <title>Design &amp; Webflow Development — Moris Design Co.</title>
+  <title>Design &amp; My Webfolio Development — Mohamed Sharief</title>
   <meta content="Turning your www into wow through user friendly design and scalable Webflow development." name="description">
   <meta content="Design &amp; Webflow Development — Moris Design Co." property="og:title">
   <meta content="Turning your www into wow through user friendly design and scalable Webflow development." property="og:description">
